finished coding but cant find the problem in my code to get the server to run

--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,10 @@
 {
-    "name": "contact",
+    "name": "textEditor",
     "version": "1.0.0",
     "description": "",
     "main": "server.js",
     "scripts": {
-        "server": "node server.js"
+        "server": "node server.js --ignore client"
     },
     "keywords": [],
     "author": "",
